--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <!--Keep This Empty / Menu will come through Javascript-->
                         </nav>
                         <ul class="menu-right-content clearfix">
-                            <li class="search-box-outer">
+                            <!-- <li class="search-box-outer">
                                 <div class="dropdown">
                                     <button class="search-box-btn" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-search"></i></button>
                                     <div class="dropdown-menu search-panel" aria-labelledby="dropdownMenu4">
@@ -183,7 +183,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </li>
+                            </li> -->
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Call Us</p>
