favicon and templates

--- a/gallery-3.html
+++ b/gallery-3.html
@@ -566,7 +566,7 @@
                                         <figure class="logo"><a href="index.html"><img src="assets/images/footer-logo-2.png" alt=""></a></figure>
                                     </div>
                                     <div class="text">
-                                        <p>Magna aliqa enim sed ipsum nisi ain veniam lorem ipsum dolor sit amets elit sed eiusmod tempor labore dolore magna aliqa.</p>
+                                            <p>Serving Toronto & the Greater Toronto Area including Mississauga, Brampton, Vaughan, Richmond Hill, Markham and nearby communities.</p>                                    
                                     </div>
                                     <ul class="footer-social clearfix">
                                         <li><a href="index.html"><i class="fab fa-facebook-f"></i></a></li>
