--- a/zebra_blinds.html
+++ b/zebra_blinds.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>CaptainBlinds | Contact Us</title>
+    <title>CaptainBlinds | Duplex (Zebra) Blinds</title>
 
     <!-- Primary SEO Meta Tags -->
     <meta name="description" content="CaptainBlinds provides custom blinds, shades and curtains in Toronto &amp; the GTA. Free in-home consultation, expert measuring, professional installation and factory-direct pricing.">
@@ -203,12 +203,14 @@
             <div class="auto-container">
                 <div class="content-box">
                     <div class="title">
-                        <h1>Contact Us</h1>
+                        <h1>Zebra Blinds</h1>
                     </div>
                     <ul class="bread-crumb clearfix">
                         <li><a href="index.html">Home</a></li>
                         <li class="shape"></li>
-                        <li>Contact Us</li>
+                        <li>Blinds</li>
+                        <li class="shape"></li>
+                        <li>Zebra Blinds</li>
                     </ul>
                 </div>
             </div>
@@ -216,95 +218,166 @@
         <!--End Page Title-->
 
 
-        <!-- google-map-section -->
-        <section class="google-map-section">
-            <div class="map-inner">
-                <div class="google-map" 
-                    id="contact-google-map" 
-                    data-map-lat="40.712776" 
-                    data-map-lng="-74.005974" 
-                    data-icon-path="assets/images/icons/map-marker.png"  
-                    data-map-title="Brooklyn, New York, United Kingdom" 
-                    data-map-zoom="12" 
-                    data-markers='{
-                        "marker-1": [40.712776, -74.005974, "<h4>Branch Office</h4><p>77/99 New York</p>","assets/images/icons/map-marker.png"]
-                    }'>
-
-                </div>
-            </div>
-        </section>
-        <!-- google-map-section -->
-
-
-        <!-- contact-style-two -->
-        <section class="contact-style-two">
-            <div class="outer-container">
-                <div class="auto-container">
-                    <div class="row clearfix">
-                        <div class="col-lg-6 col-md-12 col-sm-12 form-column">
-                            <div class="inner-box">
-                                <div class="sec-title light">
-                                    <p>Get In Touch With Us</p>
+        <!-- service-details -->
+        <section class="service-details">
+            <div class="auto-container">
+                <div class="row clearfix">
+                    <div class="col-lg-4 col-md-12 col-sm-12 sidebar-side">
+                        <div class="service-sidebar default-sidebar mr-20">
+                            <div class="sidebar-widget category-widget">
+                                <div class="widget-title">
+                                    <h3>Expert In Designing</h3>
                                     <div class="shape"></div>
-                                    <h2>Send a Message</h2>
                                 </div>
-                                <div class="form-inner">
-                                    <form method="post" action="sendemail.php" id="contact-form" class="default-form"> 
-                                        <div class="row clearfix">
-                                            <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                                <input type="text" name="username" placeholder="Your Name *" required="">
-                                            </div>
-                                            <div class="col-lg-6 col-md-6 col-sm-12 form-group">
-                                                <input type="email" name="email" placeholder="Your Email *" required="">
-                                            </div>
-                                            <div class="col-lg-6 col-md-12 col-sm-12 form-group">
-                                                <input type="text" name="phone" required="" placeholder="Your Phone">
-                                            </div>
-                                            <div class="col-lg-6 col-md-12 col-sm-12 form-group">
-                                                <input type="text" name="subject" required="" placeholder="Subject">
-                                            </div>
-                                            <div class="col-lg-12 col-md-12 col-sm-12 form-group">
-                                                <textarea name="message" placeholder="Your Message ..."></textarea>
-                                            </div>
-                                            <div class="col-lg-12 col-md-12 col-sm-12 form-group message-btn">
-                                                <button class="theme-btn-one" type="submit" name="submit-form">Send Message</button>
-                                            </div>
+                                <div class="widget-content">
+                                    <ul class="category-list clearfix"> 
+                                        <li class="active">
+                                            <h5><a href="service-details.html">Roller Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="service-details-2.html">Duplex Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="service-details-3.html">Venetian Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="service-details-4.html">Roman Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="service-details-5.html">Vertical Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="sidebar-gallery" style="background-image: url(assets/images/resource/sidebar-1.jpg);">
+                                <div class="btn-box">
+                                    <a href="gallery-1.html" class="theme-btn-one">view gallery</a>
+                                </div>
+                            </div>
+                            <div class="sidebar-widget download-brochure">
+                                <div class="widget-title">
+                                    <h3>Download Brochure</h3>
+                                    <div class="shape"></div>
+                                </div>
+                                <div class="widget-content">
+                                    <ul class="brochure-list clearfix">
+                                        <li><h5><i class="fal fa-file-pdf"></i><a href="service-details.html">Service Brochure</a></h5></li>
+                                        <li><h5><i class="fal fa-file-pdf"></i><a href="service-details.html">Pricing Guide</a></h5></li>
+                                        <li><h5><i class="fal fa-file-pdf"></i><a href="service-details.html">Artbook Gallery</a></h5></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="sidebar-widget free-quote">
+                                <div class="widget-title">
+                                    <h3>Get a Free Quote</h3>
+                                    <div class="shape"></div>
+                                </div>
+                                <div class="widget-content">
+                                    <form action="contact.html" method="post" class="quote-form">
+                                        <div class="form-group">
+                                            <input type="text" name="name" placeholder="Your Name" required="">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="email" name="email" placeholder="Email" required="">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" name="phone" placeholder="Phone" required="">
+                                        </div>
+                                        <div class="form-group">
+                                            <textarea name="message" placeholder="Message"></textarea>
+                                        </div>
+                                        <div class="form-group message-btn">
+                                            <button type="submit" class="theme-btn-one">Submit</button>
                                         </div>
                                     </form>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-12 col-sm-12 info-column">
-                            <div class="info-box">
-                                <h3>Contact Information</h3>
-                                <ul class="info clearfix">
-                                    <li>
-                                        <i class="fal fa-map-marker"></i>
-                                        <p>Visit The Store</p>
-                                        <h4>85 Twin City Towers Newyork, USA</h4>
-                                    </li>
-                                    <li>
-                                        <i class="fal fa-phone"></i>
-                                        <h4><span>Phone</span><a href="tel:1258985703">1-258-985-703</a></h4>
-                                    </li>
-                                    <li>
-                                        <i class="fal fa-envelope-open"></i>
-                                        <h4><span>Email</span><a href="mailto:info@example.com">info@example.com</a></h4>
-                                    </li>
-                                </ul>
-                                <ul class="social-links clearfix">
-                                    <li><a href="contact.html"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="contact.html"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="contact.html"><i class="fab fa-pinterest-p"></i></a></li>
-                                    <li><a href="contact.html"><i class="fab fa-google-plus-g"></i></a></li>
-                                </ul>
+                    </div>
+                    <div class="col-lg-8 col-md-12 col-sm-12 content-side">
+                        <div class="service-details-content">
+                            <div class="content-one">
+                                <figure class="image-box"><img src="assets/images/service/service-details-1.jpg" alt=""></figure>
+                                <div class="text">
+                                    <h2>Modify Your Interior with Roller Blinds</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
+                                    <p>Aliqa enim sed ipsum nisi ain veniam quis nostrul aliqua enim lore ipsum lorem ipsum dolor sit amets nsectetur adipisicing elit sed eiusmod tempor labore dolore magna.</p>
+                                    <h2>Why do you need a Roller Blinds</h2>
+                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa aliqa enim sed ipsum nisi ain.</p>
+                                    <ul class="list-item clearfix">
+                                        <li>Dolor in reprehenderit in voluptate velit esse</li>
+                                        <li>Cillum dolore eu fugiat nulla pariatur</li>
+                                        <li>Excepteur sint occaecat cupidatat non proident</li>
+                                        <li>Sunt in culpa aliqa enim sed ipsum nisi ain</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="two-column">
+                                <div class="row clearfix">
+                                    <div class="col-lg-6 col-md-6 col-sm-12 video-column">
+                                        <div class="video-inner" style="background-image: url(assets/images/resource/video-1.jpg);">
+                                            <div class="video-content centred">
+                                                <a href="https://www.youtube.com/watch?v=nfP5N9Yc72A&amp;t=28s" class="lightbox-image video-btn" data-caption=""><i class="far fa-play"></i></a>
+                                                <h3>Watch The Video</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 text-column">
+                                        <div class="text">
+                                            <i class="fal fa-comment"></i>
+                                            <h3>Product Specification & Installation</h3>
+                                            <ul class="list-item clearfix">
+                                                <li>Width: 13" - 107" Standard Lift</li>
+                                                <li>Height: 12" - 108" Standard Lift</li>
+                                                <li>Min Inside-Mount Depth: 1 1/8"</li>
+                                                <li>Min Flush Inside-Mount Depth: 3"</li>
+                                                <li>Min Outside-Mount Space: 2 1/4"</li>
+                                                <li>Headrail Dimensions: 2" x 2 1/4”</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-two">
+                                <div class="text">
+                                    <h2>How to buy Fauxis Roller Blinds</h2>
+                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa aliqa enim sed ipsum nisi ain.</p>
+                                </div>
+                                <div class="content_block_1">
+                                    <div class="content-box">
+                                        <div class="inner-box">
+                                            <figure class="vector-image-2"><img src="assets/images/resource/vector-image-6.png" alt=""></figure>
+                                            <div class="inner clearfix">
+                                                <ul class="list-item">
+                                                    <li>Customize Your Design</li>
+                                                    <li>No compromise on quality</li>
+                                                    <li>Classic blind controls light</li>
+                                                </ul>
+                                                <ul class="list-item pl-45">
+                                                    <li>Fully natural colors used</li>
+                                                    <li>Best choice blinds & curtains</li>
+                                                    <li>Open close easily by wand tilt</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <h2>Delivery & Fitting Guide</h2>
+                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa aliqa enim Call us <a href="tel:1258985703">1-258-985-703</a></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- contact-style-two end -->
+        <!-- service-details end -->
 
 
         <!-- main-footer -->
@@ -412,11 +485,6 @@
     <script src="assets/js/scrollbar.js"></script>
     <script src="assets/js/bxslider.js"></script>
     <script src="assets/js/isotope.js"></script>
-
-    <!-- map script -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-CE0deH3Jhj6GN4YvdCFZS7DpbXexzGU"></script>
-    <script src="assets/js/gmaps.js"></script>
-    <script src="assets/js/map-helper.js"></script>
 
     <!-- main-js -->
     <script src="assets/js/script.js"></script>
