--- a/venetian_blinds.html
+++ b/venetian_blinds.html
@@ -90,7 +90,7 @@
                 <div class="outer-box clearfix">
                     <div class="logo-box pull-left">
                         <figure class="logo">
-                            <a href="#home">
+                            <a href="index.html">
                                 <img src="assets/images/logo.png" alt="CaptainBlinds - Custom Blinds &amp; Window Coverings">
                             </a>
                         </figure>
@@ -108,26 +108,24 @@
                                     <li class="current"><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                     <li class="dropdown">
-                                        <a href="#products">Blinds</a>
+                                        <a href="">Blinds</a>
                                         <ul>
                                             <li><a href="roller_blinds.html">Roller Blinds</a></li>
                                             <li><a href="zebra_blinds.html">Duplex (Zebra) Blinds</a></li>
-                                            <li><a href="service-details-3.html">Venetian Blinds</a></li>
-                                            <li><a href="service-details-4.html">Roman Blinds</a></li>
-                                            <li><a href="service-details-5.html">Vertical Blinds</a></li>
+                                            <li><a href="venetian_blinds.html">Venetian Blinds</a></li>
+                                            <li><a href="roman_blinds.html">Roman Blinds</a></li>
+                                            <li><a href="vertical_blinds.html">Vertical Blinds</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
-                                        <a href="#products">Curtains</a>
+                                        <a href="">Curtains</a>
                                         <ul>
-                                            <li><a href="service.html">Our Services</a></li>
-                                            <li><a href="service-details.html">Sheer &amp; Drapery Panels</a></li>
-                                            <li><a href="service-details-2.html">Layered Curtains</a></li>
-                                            <li><a href="service-details-3.html">Blackout Curtains</a></li>
+                                            <li><a href="drapery_panels.html">Sheer &amp; Drapery Panels</a></li>
+                                            <li><a href="layered_curtains.html">Layered Curtains</a></li>
+                                            <li><a href="blackout curtains.html">Blackout Curtains</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#faq">FAQ</a></li>
-                                    <li><a href="#contact">Contact</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -147,7 +145,7 @@
                 <div class="outer-box clearfix">
                     <div class="logo-box pull-left">
                         <figure class="logo">
-                            <a href="#home">
+                            <a href="#index.html">
                                 <img src="assets/images/logo.png" alt="CaptainBlinds">
                             </a>
                         </figure>
@@ -176,7 +174,7 @@
 
             <nav class="menu-box">
                 <div class="nav-logo">
-                    <a href="#home">
+                    <a href="index.html">
                         <img src="assets/images/logo.png" alt="CaptainBlinds" title="CaptainBlinds">
                     </a>
                 </div>
