--- a/vertical_blinds.html
+++ b/vertical_blinds.html
@@ -90,7 +90,7 @@
                 <div class="outer-box clearfix">
                     <div class="logo-box pull-left">
                         <figure class="logo">
-                            <a href="#home">
+                            <a href="index.html">
                                 <img src="assets/images/logo.png" alt="CaptainBlinds - Custom Blinds &amp; Window Coverings">
                             </a>
                         </figure>
@@ -145,7 +145,7 @@
                 <div class="outer-box clearfix">
                     <div class="logo-box pull-left">
                         <figure class="logo">
-                            <a href="#home">
+                            <a href="#index.html">
                                 <img src="assets/images/logo.png" alt="CaptainBlinds">
                             </a>
                         </figure>
@@ -174,7 +174,7 @@
 
             <nav class="menu-box">
                 <div class="nav-logo">
-                    <a href="#home">
+                    <a href="index.html">
                         <img src="assets/images/logo.png" alt="CaptainBlinds" title="CaptainBlinds">
                     </a>
                 </div>
